--- a/index.html
+++ b/index.html
@@ -437,13 +437,13 @@
               <div class="col-md-4 col-sm-6">
                 <div class="box-work">
                   <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/p1.png" alt="">
+                    <img src="assets/theme/images/portfolio/dabbleit_promo.png" alt="">
                     <div class="hover">
                       <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/p1.png" title="pic 02" class="galery-item" ><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
+                        <a href="assets/theme/images/portfolio/dabbleit_promo.png" title="Dabble" class="galery-item" ><i class="fa fa-search-plus"></i></a>
+                        <a href="portfolio-dabble.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">DabbleIt</a>
+                      <a href="portfolio-dabble.html" class="project-title">Dabble</a>
                     </div>
                   </div>
                 </div>
@@ -521,10 +521,10 @@
               <div class="col-md-4 col-sm-6">
                 <div class="box-work">
                   <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/p1.png" alt="">
+                    <img src="assets/theme/images/portfolio/p2.jpg" alt="">
                     <div class="hover">
                       <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/p1.png"  title="pic 07" class="galery-item"><i class="fa fa-search-plus"></i></a>
+                        <a href="assets/theme/images/portfolio/p2.jpg"  title="pic 07" class="galery-item"><i class="fa fa-search-plus"></i></a>
                         <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
                       </div>
                       <a href="portfolio-detail.html" class="project-title">Project Title</a>
