remove not used code

--- a/portfolio-dabble.html
+++ b/portfolio-dabble.html
@@ -23,8 +23,6 @@
     <link href="assets/plugins/typed/typed.css" rel="stylesheet">
     <!-- popup style-->
     <link href="assets/plugins/magnific-popup/magnific-popup.css" rel="stylesheet">
-    <!-- simple Captcha-->
-    <link href="assets/plugins/simpleCaptcha/jquery.simpleCaptcha.css" rel="stylesheet">
 
 
 
@@ -212,7 +210,7 @@
     <script src="assets/plugins/bootstrap-3.3.1/js/bootstrap.min.js"></script>
 
     <!-- maps js -->
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script> 
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script> 
     <script src="assets/plugins/jquery.ui.map.js"></script> 
 
     <!-- advanced easing options -->
@@ -226,8 +224,6 @@
     <script src="assets/plugins/typed/typed.js"></script>
     <!-- easy chart-->
     <script src="assets/plugins/easypiechart/jquery.easypiechart.min.js"></script>
-    <!-- simple Captcha -->
-    <script src="assets/plugins/simpleCaptcha/jquery.simpleCaptcha.js"></script>
     <!-- simple Ajax Uploader -->
     <script src="assets/plugins/Simple-Ajax-Uploader/SimpleAjaxUploader.min.js"></script>
     <!-- validate jquery-->
