--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!--favicon-->
     <!-- <link rel="apple-touch-icon" href="assets/theme/images/vc_icon.png">
     <link rel="icon" href="assets/theme/images/favicon.ico"> -->
-    <link rel="shortcut icon" href="assets/theme/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="assets/theme/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/theme/images/vc_icon.png" type="image/x-icon">
+    <link rel="icon" href="assets/theme/images/vc_icon.png" type="image/x-icon">
 
     <!--pace (page loader) style-->
     <link href="assets/plugins/pace/pace.css" rel="stylesheet">
@@ -26,8 +26,6 @@
     <link href="assets/plugins/typed/typed.css" rel="stylesheet">
     <!-- popup style-->
     <link href="assets/plugins/magnific-popup/magnific-popup.css" rel="stylesheet">
-    <!-- simple Captcha-->
-    <link href="assets/plugins/simpleCaptcha/jquery.simpleCaptcha.css" rel="stylesheet">
 
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -627,11 +625,6 @@
       </footer><!--END FOOTER-->
     </div><!--End wrapper page-->
 
-    <!-- generate captcha -->
-    <div id="mycaptcha-wrap" class="hidden mycaptcha1">
-      <div id="mycaptcha" class="mycaptcha1"></div>
-    </div>
-
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81886809-3"></script>
     <script>
@@ -660,8 +653,6 @@
     <script src="assets/plugins/typed/typed.js"></script>
     <!-- easy chart-->
     <script src="assets/plugins/easypiechart/jquery.easypiechart.min.js"></script>
-    <!-- simple Captcha -->
-    <script src="assets/plugins/simpleCaptcha/jquery.simpleCaptcha.js"></script>
     <!-- simple Ajax Uploader -->
     <script src="assets/plugins/Simple-Ajax-Uploader/SimpleAjaxUploader.min.js"></script>
     <!-- validate jquery-->
