--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
             <div class="bg-secondary clearfix">
               <div class="inner-text">
                 <h3 class="color-dark no-margin-top">Hello There!</h3>
-                <p >I have 7 years work experience in software engineering(Android, React, NodeJs, etc) and 4+ years work experience in User experience design for multiple different companies from the different industry. </p>
+                <p >I have 7 years work experience in <b>software engineering</b> (Android, React, NodeJs, etc) and 4+ years work experience in <b>User experience design</b> for multiple different companies from the different industry. </p>
 
-                <p class="no-margin">I'm an advocate of lean UX, which means I love agile and human center design. My design philosophy is rational, consistency and agile. Rational means all the design I come up with always based on certain reason, either from user testing or widely accepted design principle and patterns. Consistency means I will use style guideline and well-defined design principle across the whole design life cycle, which will reduce engineering effort and handoff time. Agile means I will perform design ideation, feasibility check, wireframe, prototyping, quick validation within each development cycle.</p> <br>
+                <p class="no-margin">I'm an advocate of <b>lean UX</b>, which means I love agile and user center design. My design philosophy is rational, consistency and agile. <b>Rational</b> means all the design I come up with always based on certain reason, either from <b>user testing</b> or widely accepted <b>design principle</b> and patterns. <b>Consistency</b> means I will use <b>style guideline</b> and well-defined design principle across the whole design life cycle, which will reduce engineering effort and handoff time. <b>Agile</b> means I will perform design ideation, feasibility check, <b>wireframe, prototyping</b>, quick validation within each development cycle.</p> <br>
 
                 <p class="no-margin">I think I can make a contribution to your project and help you make a great product.</p>
               </div>
@@ -455,7 +455,7 @@
                         <a href="assets/theme/images/portfolio/p2.jpg" title="pic 02" class="galery-item"><i class="fa fa-search-plus"></i></a>
                         <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">Project Title</a>
+                      <a href="portfolio-detail.html" class="project-title">Baton Mobile</a>
                     </div>
                   </div>
                 </div>
