--- a/index.html
+++ b/index.html
@@ -449,13 +449,13 @@
               <div class="col-md-4 col-sm-6">
                 <div class="box-work">
                   <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/p2.jpg" alt="">
+                    <img src="assets/theme/images/portfolio/baton_promo.png" alt="">
                     <div class="hover">
                       <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/p2.jpg" title="pic 02" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
+                        <a href="assets/theme/images/portfolio/baton_promo.png" title="Baton" class="galery-item"><i class="fa fa-search-plus"></i></a>
+                        <a href="portfolio-baton.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">Baton Mobile</a>
+                      <a href="portfolio-baton.html" class="project-title">Baton</a>
                     </div>
                   </div>
                 </div>
