--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <!-- END MORE SKILS -->
 
           <div class="title-border">
-            <h5 class="text-uppercase color-dark no-margin text-bold ">Engineer SKILLS</h5>
+            <h5 class=" color-dark no-margin text-bold ">Engineer SKILLS</h5>
           </div>  
 
           <!--SKIL CHART TOP-->
@@ -469,7 +469,7 @@
                         <a href="assets/theme/images/portfolio/p3.png" title="pic 03" class="galery-item"><i class="fa fa-search-plus"></i></a>
                         <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">Project Title</a>
+                      <a href="portfolio-detail.html" class="project-title">Dubdub</a>
                     </div>
                   </div>
                 </div>
@@ -483,7 +483,7 @@
                         <a href="assets/theme/images/portfolio/p4.jpg" title="pic 04" class="galery-item"><i class="fa fa-search-plus"></i></a>
                         <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">Project Title</a>
+                      <a href="portfolio-detail.html" class="project-title">Outpatient</a>
                     </div>
                   </div>
                 </div>
