--- a/index.html
+++ b/index.html
@@ -463,13 +463,13 @@
               <div class="col-md-4 col-sm-6">
                 <div class="box-work">
                   <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/p3.png" alt="">
+                    <img src="assets/theme/images/portfolio/companion_promo.png" alt="">
                     <div class="hover">
                       <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/p3.png" title="pic 03" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
+                        <a href="assets/theme/images/portfolio/companion_promo.png" title="pic 03" class="galery-item"><i class="fa fa-search-plus"></i></a>
+                        <a href="portfolio-companion.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">Dubdub</a>
+                      <a href="portfolio-companion.html" class="project-title">Companion</a>
                     </div>
                   </div>
                 </div>
@@ -497,7 +497,7 @@
                         <a href="assets/theme/images/portfolio/p6.png" title="pic 05" class="galery-item"><i class="fa fa-search-plus"></i></a>
                         <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">Project Title</a>
+                      <a href="portfolio-detail.html" class="project-title">DubWorld</a>
                     </div>
                   </div>
                 </div>
@@ -511,7 +511,7 @@
                         <a href="assets/theme/images/portfolio/p5.jpg" title="pic 06" class="galery-item"><i class="fa fa-search-plus"></i></a>
                         <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">Project Title</a>
+                      <a href="portfolio-detail.html" class="project-title">DubMobile</a>
                     </div>
                   </div>
                 </div>
