--- a/index.html
+++ b/index.html
@@ -495,9 +495,9 @@
                     <div class="hover">
                       <div class="link-btns">
                         <a href="assets/theme/images/portfolio/p6.png" title="pic 05" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
+                        <a href="portfolio-dubdub.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">DubWorld</a>
+                      <a href="portfolio-dubdub.html" class="project-title">DubDub</a>
                     </div>
                   </div>
                 </div>
@@ -511,7 +511,7 @@
                         <a href="assets/theme/images/portfolio/p5.jpg" title="pic 06" class="galery-item"><i class="fa fa-search-plus"></i></a>
                         <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
                       </div>
-                      <a href="portfolio-detail.html" class="project-title">DubMobile</a>
+                      <a href="portfolio-detail.html" class="project-title">BBTracker</a>
                     </div>
                   </div>
                 </div>
