add dubdub portfolio

--- a/portfolio-dubdub.html
+++ b/portfolio-dubdub.html
@@ -47,8 +47,8 @@
         <div class="content-table header-content-fixed">
           <div class="v-content">
             <div class="container">
-              <h1 class="text-uppercase color-dark name">Dabble</h1>
-              <h4  class="text-uppercase color-dark font-alt job">Branding - UX Design - Full-Stack Engineering</h4>
+              <h1 class="text-uppercase color-dark name">DubDub</h1>
+              <h4  class="text-uppercase color-dark font-alt job">UX Design - Mobile Engineering Lead</h4>
               <a href="#portfolio" class="move-to-next link-inpage"><i class="fa fa-4x fa-angle-double-down" ></i></a>
             </div>
           </div>
@@ -115,13 +115,13 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item ">
-                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/dabble_branding.png " alt="">
+                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/dubcandy_key_features.png" alt="">
                 </div>
                 <div class="item active">
-                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/dabbleit_devices.png " alt="">
+                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/dubdub_promo.png " alt="">
                 </div>
                 <div class="item">
-                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/dabble_key_feature.png" alt="">
+                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/dubworld_key_features.png" alt="">
                 </div>
               </div>
 
@@ -140,21 +140,26 @@
 
             <div class="row">
               <div class="col-sm-6">
-                <h3 class="text-uppercase color-dark text-bold">What is Dabble?</h3>
+                <h3 class="text-uppercase color-dark text-bold">What is DubDub?</h3>
                 <div class="white-space-10"></div>
-                <p>DABBLE acts as a platform for users to share, annotate, tag and discover new, unique and curated items from a select pool of creators. Then DABBLE brings the user into the creative process by providing background, maker process, feedback, discussion and suggestion, both to the community and the creators. This allows the user to interact and have a say in what they see, what they share and ultimately, what they buy. The relationship between the creator and the user becomes that much more tangible as analysis and data stream through. The end goal is to have the user and creator be able to collaboratively create something that evolves to market demand much quicker and crazier then before.</p>
+                <p>dubdub is the premier tech for creating quality shoppable video.</p>
+                <p>We’re on a mission to change how the world creates, shares and shops video in social media.</p>
                 <div class="white-space-20"></div>
-                <p><a href="https://twitter.com/dabbleit?lang=en" class="btn btn-flat-solid primary-btn">Visit Site</a></p>
+
+                <h3 class="text-uppercase color-dark text-bold">What is Dubcandy?</h3>
+                <div class="white-space-10"></div>
+                <p>DubCandy is the latest mobile application from dubdub and is available for iOS and Android. DubCandy lets you turn any video content into a shoppable video straight from your phone. If you’re doing a product review, launching a product or, even just talking about your favourite products and brands, then you can turn that video into one that sells products directly from Amazon. When an item in your video is purchased on Amazon, you earn revenue.</p>
+                <div class="white-space-20"></div>
+                <p><a href="https://www.linkedin.com/company/dubdub-stories/" class="btn btn-flat-solid primary-btn">Visit Site</a></p>
                 <div class="white-space-20"></div>
               </div>
               <div class="col-sm-6">
                 <div class="white-space-20"></div>
                 <div class="box-testimonial left">
-                  <img src="assets/theme/images/patner/uoft.png" alt="" class="img-profile">
-                  <h5 class="color-dark text-capitalize no-margin-top line-dash-bottom">Top 10 Finalist</h5>
-                  <p>Dabbleit was part of the 2014 UofT Hatchery Cohort and became top 10 Finalist.</p>
-                  <p><a href="https://hatchery.engineering.utoronto.ca/"><img src="assets/theme/images/patner/new_hatch_logo.png" alt="" class="img-logo-client"></a></p>
-                  <p class="font-alt no-margin color-dark">UofT Hatchery Cohort</p>
+                  <img src="assets/theme/images/patner/cision_logo.png" alt="" class="img-profile">
+                  <h5 class="color-dark text-capitalize no-margin-top line-dash-bottom">"First shoppable video app"</h5>
+                  <p>dubdub Launches dubcandy, First App to Allow Influencers and Businesses to Earn Revenue from Shoppable Videos.</p>
+                  <p><a href="https://www.newswire.ca/news-releases/dubdub-launches-dubcandy-first-app-to-allow-influencers-and-businesses-to-earn-revenue-from-shoppable-videos-604985216.html" class="btn btn-flat-solid primary-btn margin-right-5">Read the news</a></p>
                 </div>
               </div>
 
