--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                   <ul class="breadcrumb main-nav nav">
                     <li class="active"><a href="#home" class="link-inpage">Home</a></li>
                     <li ><a href="#about" class="link-inpage">About</a></li>
-                    <li ><a href="#resume" class="link-inpage">Resume</a></li>
                     <li ><a href="#portfolio" class="link-inpage">Portfolio</a></li>
+                    <li ><a href="#resume" class="link-inpage">Resume</a></li>
                     <!-- <li ><a href="#blog" class="link-inpage">Blog</a></li> -->
                     <li ><a href="#contact" id="contact-tab" class="link-inpage">Contact</a></li>
                   </ul>
@@ -168,6 +168,115 @@
         </div><!-- END SERVICES-->
       </section><!-- END ABOUT ME -->
 
+
+      <!--PORTFOLIO-->
+      <section id="portfolio" class="block-section">
+        <!--PORTFOLIO TITLE-->
+        <div class=" shape-bottom">
+          <div class="bg-secondary block-title">
+            <div class="container">
+              <h2 class="text-uppercase color-dark text-bold no-margin">Portfolio</h2>
+              <div class="title-icon"> <i class="fa fa-inbox"></i> </div>
+            </div>
+          </div>
+        </div><!--END PORTFOLIO TITLE-->
+
+        <!--List WOrk-->
+        <div class="block-page" >
+
+
+          <div class="container-medium clearfix">
+            <div class="row list-work">
+              <div class="col-md-4 col-sm-6">
+                <div class="box-work">
+                  <div class="work-preview">
+                    <img src="assets/theme/images/portfolio/dabbleit_promo.png" alt="">
+                    <div class="hover">
+                      <div class="link-btns">
+                        <a href="assets/theme/images/portfolio/dabbleit_promo.png" title="Dabble" class="galery-item" ><i class="fa fa-search-plus"></i></a>
+                        <a href="portfolio-dabble.html"><i class="fa fa-link"></i></a>
+                      </div>
+                      <a href="portfolio-dabble.html" class="project-title">Dabble</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-sm-6">
+                <div class="box-work">
+                  <div class="work-preview">
+                    <img src="assets/theme/images/portfolio/baton_promo.png" alt="">
+                    <div class="hover">
+                      <div class="link-btns">
+                        <a href="assets/theme/images/portfolio/baton_promo.png" title="Baton" class="galery-item"><i class="fa fa-search-plus"></i></a>
+                        <a href="portfolio-baton.html"><i class="fa fa-link"></i></a>
+                      </div>
+                      <a href="portfolio-baton.html" class="project-title">Baton</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-sm-6">
+                <div class="box-work">
+                  <div class="work-preview">
+                    <img src="assets/theme/images/portfolio/companion_promo.png" alt="">
+                    <div class="hover">
+                      <div class="link-btns">
+                        <a href="assets/theme/images/portfolio/companion_promo.png" title="pic 03" class="galery-item"><i class="fa fa-search-plus"></i></a>
+                        <a href="portfolio-companion.html"><i class="fa fa-link"></i></a>
+                      </div>
+                      <a href="portfolio-companion.html" class="project-title">Companion</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- <div class="col-md-4 col-sm-6">
+                <div class="box-work">
+                  <div class="work-preview">
+                    <img src="assets/theme/images/portfolio/p4.jpg" alt="">
+                    <div class="hover">
+                      <div class="link-btns">
+                        <a href="assets/theme/images/portfolio/p4.jpg" title="pic 04" class="galery-item"><i class="fa fa-search-plus"></i></a>
+                        <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
+                      </div>
+                      <a href="portfolio-detail.html" class="project-title">Outpatient</a>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
+              <div class="col-md-4 col-sm-6">
+                <div class="box-work">
+                  <div class="work-preview">
+                    <img src="assets/theme/images/portfolio/dubdub_promo.png" alt="">
+                    <div class="hover">
+                      <div class="link-btns">
+                        <a href="assets/theme/images/portfolio/dubdub_promo.png" title="pic 05" class="galery-item"><i class="fa fa-search-plus"></i></a>
+                        <a href="portfolio-dubdub.html"><i class="fa fa-link"></i></a>
+                      </div>
+                      <a href="portfolio-dubdub.html" class="project-title">DubDub</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 col-sm-6">
+                <div class="box-work">
+                  <div class="work-preview">
+                    <img src="assets/theme/images/portfolio/bbtracker_promo.png" alt="">
+                    <div class="hover">
+                      <div class="link-btns">
+                        <a href="assets/theme/images/portfolio/bbtracker_promo.png" title="pic 06" class="galery-item"><i class="fa fa-search-plus"></i></a>
+                        <a href="portfolio-bbtracker.html"><i class="fa fa-link"></i></a>
+                      </div>
+                      <a href="portfolio-bbtracker.html" class="project-title">BBTracker</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--BTN SHOW MORE-->
+            <!-- <div class="box-btn-more"><a href="portfolio-list.html" class="btn btn-flat-line btn-link" id="more-work"> Show More</a></div> -->
+          </div>
+        </div><!--END List WOrk-->
+      </section><!--END PORTFOLIO-->
 
       <!-- RESUME -->
       <section id="resume" class="block-section">
@@ -412,116 +521,6 @@
           </div>
         </div><!-- END DOWNLOAD & PRVIEW BTN -->
       </section><!-- END SERVICES-->
-
-
-      <!--PORTFOLIO-->
-      <section id="portfolio" class="block-section">
-        <!--PORTFOLIO TITLE-->
-        <div class=" shape-bottom">
-          <div class="bg-secondary block-title">
-            <div class="container">
-              <h2 class="text-uppercase color-dark text-bold no-margin">Portfolio</h2>
-              <div class="title-icon"> <i class="fa fa-inbox"></i> </div>
-            </div>
-          </div>
-        </div><!--END PORTFOLIO TITLE-->
-
-        <!--List WOrk-->
-        <div class="block-page" >
-
-
-          <div class="container-medium clearfix">
-            <div class="row list-work">
-              <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/dabbleit_promo.png" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/dabbleit_promo.png" title="Dabble" class="galery-item" ><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-dabble.html"><i class="fa fa-link"></i></a>
-                      </div>
-                      <a href="portfolio-dabble.html" class="project-title">Dabble</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/baton_promo.png" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/baton_promo.png" title="Baton" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-baton.html"><i class="fa fa-link"></i></a>
-                      </div>
-                      <a href="portfolio-baton.html" class="project-title">Baton</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/companion_promo.png" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/companion_promo.png" title="pic 03" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-companion.html"><i class="fa fa-link"></i></a>
-                      </div>
-                      <a href="portfolio-companion.html" class="project-title">Companion</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/p4.jpg" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/p4.jpg" title="pic 04" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
-                      </div>
-                      <a href="portfolio-detail.html" class="project-title">Outpatient</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/dubdub_promo.png" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/dubdub_promo.png" title="pic 05" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-dubdub.html"><i class="fa fa-link"></i></a>
-                      </div>
-                      <a href="portfolio-dubdub.html" class="project-title">DubDub</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/p5.jpg" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/p5.jpg" title="pic 06" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-detail.html"><i class="fa fa-link"></i></a>
-                      </div>
-                      <a href="portfolio-detail.html" class="project-title">BBTracker</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!--BTN SHOW MORE-->
-            <div class="box-btn-more"><a href="portfolio-list.html" class="btn btn-flat-line btn-link" id="more-work"> Show More</a></div>
-          </div>
-        </div><!--END List WOrk-->
-      </section><!--END PORTFOLIO-->
 
       <!--CONTACT-->
       <section id="contact" class="block-section">
