--- a/portfolio-bbtracker.html
+++ b/portfolio-bbtracker.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <title>Companion - Portfolio Detail - Victor Chen Li's Online Portfolio</title>
+    <title>BBTracker - Portfolio Detail - Victor Chen Li's Online Portfolio</title>
     <!--favicon-->
     <link rel="apple-touch-icon" href="assets/theme/images/apple-touch-icon.png">
     <link rel="icon" href="assets/theme/images/favicon.ico">
@@ -23,6 +23,8 @@
     <link href="assets/plugins/typed/typed.css" rel="stylesheet">
     <!-- popup style-->
     <link href="assets/plugins/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <!-- simple Captcha-->
+    <link href="assets/plugins/simpleCaptcha/jquery.simpleCaptcha.css" rel="stylesheet">
 
 
 
@@ -47,8 +49,8 @@
         <div class="content-table header-content-fixed">
           <div class="v-content">
             <div class="container">
-              <h1 class="text-uppercase color-dark name">Companion</h1>
-              <h4  class="text-uppercase color-dark font-alt job">UX Design</h4>
+              <h1 class="text-uppercase color-dark name">BBTracker</h1>
+              <h4  class="text-uppercase color-dark font-alt job">UX Design - Full-Stack Engineering</h4>
               <a href="#portfolio" class="move-to-next link-inpage"><i class="fa fa-4x fa-angle-double-down" ></i></a>
             </div>
           </div>
@@ -115,13 +117,16 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item ">
-                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/companion_screen_2.jpg" alt="">
+                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/bbtracker_promo.png" alt="">
+
                 </div>
                 <div class="item active">
-                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/companion_key_features.png" alt="">
+                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/bbtracker_key_feature_home.jpg " alt="">
+
                 </div>
                 <div class="item">
-                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/companion_screen_1.jpg " alt="">
+                  <img class="fix-heigh-500px" src="assets/theme/images/portfolio/bbtracker_key_feature_history.jpg " alt="">
+
                 </div>
               </div>
 
@@ -140,23 +145,22 @@
 
             <div class="row">
               <div class="col-sm-6">
-                <h3 class="text-uppercase color-dark text-bold">What is Companion?</h3>
+                <h3 class="text-uppercase color-dark text-bold">Description</h3>
                 <div class="white-space-10"></div>
-                <p>PointClickCare Companion is a native mobile app that streamlines the workflow for service delivery and documentation. Designed to offer an elegant and intuitive user experience, Companion empowers care givers with a fast and easy-to-use mobile tool that unifies the workflow for the delivery and documentation of services and medication.</p>
+                <p>Curabitur nec nulla lectus, non hendrerit lorem. Quisque lorem risus, porttitor eget fringilla non, vehicula sed tortor. Proin enim quam, vulputate at lobortis quis, condimentum at justo. Phasellus nec nisi justo.</p>
+                <p> porttitor eget fringilla non, vehicula sed tortor. Proin enim quam, vulputate at lobortis quis, condimentum at justo. Phasellus nec nisi justo. Ut luctus sagittis nulla at dapibus. Aliquam ullamcorper commodo elit, quis ornare eros consectetur.</p>
                 <div class="white-space-20"></div>
-                <p>
-                  <a href="https://pointclickcare.com/senior-care-industry-specific-software-solutions/assisted-living-facilities/pointclickcare-companion/" class="btn btn-flat-solid primary-btn margin-right-5">Visit Site</a>
-                  <a href="https://pointclickcare.wistia.com/medias/cemqk2tp3n?wtime=0" class="btn btn-flat-solid primary-btn">Watch Video</a>
-                </p>
+                <p><a href="#" class="btn btn-flat-solid primary-btn">Visit Site</a></p>
                 <div class="white-space-20"></div>
               </div>
               <div class="col-sm-6">
                 <div class="white-space-20"></div>
                 <div class="box-testimonial left">
-                  <img src="assets/theme/images/patner/pcc.png" alt="" class="img-profile">
-                  <h5 class="color-dark text-capitalize no-margin-top line-dash-bottom">Feedback from care provider</h5>
-                  <p>I can't believe I've only been using this app for a minute - it's so comfortable and natural I feel like I've been using it for years.</p>
-                  <p><a href="https://www.linkedin.com/pulse/behind-scenes-goal-setting-our-new-mobile-app-care-staff-cory-mogk/" class="btn btn-flat-solid primary-btn margin-right-5">Full article</a></p>
+                  <img src="assets/theme/images/people/1.jpg" alt="" class="img-profile">
+                  <h5 class="color-dark text-capitalize no-margin-top line-dash-bottom"> Well Done Jhone! This guy is Really amazing.  </h5>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p><a href="#"><img src="assets/theme/images/patner/1.png" alt="" class="img-logo-client"></a></p>
+                  <p class="font-alt no-margin color-dark">Colie - Css Founder</p>
                 </div>
               </div>
 
@@ -212,7 +216,7 @@
     <script src="assets/plugins/bootstrap-3.3.1/js/bootstrap.min.js"></script>
 
     <!-- maps js -->
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script> 
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script> 
     <script src="assets/plugins/jquery.ui.map.js"></script> 
 
     <!-- advanced easing options -->
@@ -226,6 +230,8 @@
     <script src="assets/plugins/typed/typed.js"></script>
     <!-- easy chart-->
     <script src="assets/plugins/easypiechart/jquery.easypiechart.min.js"></script>
+    <!-- simple Captcha -->
+    <script src="assets/plugins/simpleCaptcha/jquery.simpleCaptcha.js"></script>
     <!-- simple Ajax Uploader -->
     <script src="assets/plugins/Simple-Ajax-Uploader/SimpleAjaxUploader.min.js"></script>
     <!-- validate jquery-->
